add exercise for virtual threads, change structure of exercises and solutions